--- a/pages-source/tvet/components/frame-component.module.css
+++ b/pages-source/tvet/components/frame-component.module.css
@@ -109,7 +109,7 @@
   }
   .tvetSponsorshipProgrammeInner {
     padding-top: 210px;
-    padding-bottom: 260px;
+    padding-bottom: 191px;
     padding-left: 16px;
     padding-right: 16px;
     box-sizing: border-box;
